[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/UI/Fonts/dum1.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/UI/SkillIcons/Ice_Spear_Icon.png" type="Texture" id=2]
[ext_resource path="res://Resources/SkillTooltipPanel.tres" type="StyleBox" id=3]
[ext_resource path="res://Scripts/UI/SkillTooltip.gd" type="Script" id=4]
[ext_resource path="res://Resources/UI_Font_24.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/UI/Main/ItemTooltip/Divider.png" type="Texture" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.843137 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.6, 0.466667, 0.0784314, 1 )

[sub_resource type="DynamicFont" id=2]
size = 36
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 22
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
use_filter = true
font_data = ExtResource( 1 )

[node name="SkillTooltip" type="Control"]
modulate = Color( 1, 1, 1, 0.882353 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1920.0
margin_bottom = -1080.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="Panel" parent="."]
margin_right = 650.0
margin_bottom = 50.0
rect_min_size = Vector2( 650, 50 )
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_right = 1.0
margin_bottom = 10.0
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_right = 650.0
margin_bottom = 50.0
custom_constants/separation = -1

[node name="Panel3" type="Panel" parent="Background/VBoxContainer/HBoxContainer"]
margin_right = 50.0
margin_bottom = 50.0
rect_min_size = Vector2( 50, 50 )
custom_styles/panel = ExtResource( 3 )

[node name="Icon" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 1.0
margin_right = -1.0
margin_bottom = -1.0
rect_min_size = Vector2( 22, 22 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 449.0
margin_bottom = 50.0
rect_min_size = Vector2( 400, 18 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )

[node name="Name" type="Label" parent="Background/VBoxContainer/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 2 )
text = " SKILL_NAME"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 448.0
margin_right = 549.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 50 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )

[node name="Cost" type="Label" parent="Background/VBoxContainer/HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Mana Cost
9999999"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 548.0
margin_right = 650.0
margin_bottom = 50.0
rect_min_size = Vector2( 10, 50 )
size_flags_horizontal = 3
custom_styles/panel = ExtResource( 3 )

[node name="CastTime" type="Label" parent="Background/VBoxContainer/HBoxContainer/Panel4"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Use Time
99999 sec"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Background/VBoxContainer"]
margin_top = 50.0
margin_right = 650.0
margin_bottom = 123.0
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Background/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 645.0
margin_bottom = 73.0

[node name="Tags" type="RichTextLabel" parent="Background/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 640.0
margin_bottom = 27.0
custom_fonts/normal_font = SubResource( 4 )
bbcode_enabled = true
bbcode_text = "[center][color=#b9b9b9]aaa[/color][color=#ffffff],[/color] [color=#b9b9b9]bbb[/color][color=#ffffff],[/color] [color=#b9b9b9]ccc[/color][color=#ffffff],[/color] [color=#b9b9b9]ddd[/color][color=#ffffff],[/color] [/center]"
text = "aaa, bbb, ccc, ddd, "
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Divider" type="TextureRect" parent="Background/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 640.0
margin_bottom = 33.0
texture = ExtResource( 6 )
stretch_mode = 4

[node name="Description" type="RichTextLabel" parent="Background/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 640.0
margin_bottom = 68.0
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
fit_content_height = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}
